<resources>
    <string name="app_name">Betex Sports</string>
    <string name="default_bet_value">10.01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_balance_title">Disponible:</string>
    <string name="nav_balance_value">10.5 ETH</string>
    <string name="nav_userName_value">Diego Betex</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_events">Mercado</string>
    <string name="title_my_bets">Mis apuestas</string>
    <string name="title_help">Ayuda</string>
    <string name="title_challenges">Directas</string>
    <string name="title_nav_events">Deportes y mercados</string>
    <string name="title_nav_settings">Configuración</string>
    <string name="title_nav_rules">Reglas</string>
    <string name="title_nav_share">Compartir</string>
    <string name="title_nav_wallet">Mi billetera</string>
    <string name="title_event_type_soccer">Fútbol</string>
    <string name="title_event_type_boxing">Boxeo</string>
    <string name="title_event_type_mma">MMA</string>
    <string name="default_event_type">Fútbol</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_bet_titles">Apuesta a Favor</string>
    <string name="back_bet_text">A favor</string>
    <string name="lay_bet_short_text">Contra</string>
    <string name="lay_bet_text">En contra</string>
    <string name="time_example">23 Abril 19.30 hs</string>
    <string name="versus_leyend">V.S</string>
    <string name="competition_example">Copa Libertadores 2019</string>
    <string name="local_soccer_team_example">Boca Juniors</string>
    <string name="draw_text">Empate</string>
    <string name="visitor_soccer_team_example">River Plate</string>
    <string name="show_more">Más apuestas</string>
    <string name="minimun_bet_text">Apuesta mínima</string>
    <string name="title_place_bet_example">Boca Juniors Ganador</string>
    <string name="odd_text">Cuota</string>
    <string name="odd_text_subtitle">Multiplicador</string>
    <string name="my_bet_text">Mi apuesta</string>
    <string name="cryptocurrency_default">ETH</string>
    <string name="cryptocurrency_name_default">Ether</string>
    <string name="place_bet_buton_text">Apostar</string>
    <string name="total_quantity_text">Total de goles</string>
    <string name="send_text">Enviar</string>
    <string name="receive_text">Recibir</string>
    <string name="exit_dialog_fragment_title">Betex Mobile</string>
    <string name="exit_dialog_fragment_content">¿Desea salir de Betex Mobile?</string>
    <string name="exit_dialog_fragment_exit">Salir</string>
    <string name="exit_dialog_fragment_continue">Seguir jugando</string>
    <string name="balance_example">104.56</string>
    <string name="my_bets_in_play_title">Jugando</string>
    <string name="my_bets_all_tittle">Todas</string>
    <string name="my_bets_back">Devueltas</string>
    <string name="matched_bet_text">Matcheadas</string>
    <string name="unmutched_bet">Sin Matchear</string>
    <string name="search_title">Buscar</string>
    <string name="soccer_event_example_my_bet">Mancester city - Manchester United</string>
    <string name="market_type_example_my_bet">Más de 2.5 goles</string>
    <string name="liability_text">En riesgo</string>
    <string name="stake_text">Apuesta</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="create_new_bet">Nueva apuesta</string>
    <string name="Create_new_challenge">Nuevo reto</string>
    <string name="tab_title_open_challenges">Abiertos</string>
    <string name="tab_title_my_challenges_challenges">Mis Retos</string>
    <string name="tab_title_my_contacts_challenges">Mis amigos</string>
    <string name="start_event_text">Inicio del evento</string>
    <string name="understood_text">Entendido</string>
    <string name="finish_text">Finalizar</string>
    <string name="go_back_text">Volver</string>
    <string name="wellcome_title_01">Bienvenid@ a Betex!</string>
    <string name="wellcome_title_02">Desafía a tus amig@s!</string>
    <string name="wellcome_title_03">Controla tus apuestas y fondos!</string>
    <string name="wellcome_text_01">Betex Mobile es un divertido juego que permite realizar apuestas en Fútbol, Boxeo y Artes Marciales Mixtas contra otras personas, de una manera fácil y emocionante usando criptomonedas.</string>
    <string name="wellcome_text_02">Puedes apostar directamente contra un amigo o crear una apuesta anónima, cualquier persona del mundo te la puede aceptar gracias a la confiable tecnología Blockchain de Ethereum.</string>
    <string name="wellcome_text_03">Betex es una wallet... los tokens son 100% tuy@s. Puedes controlar tus apuestas muy fácilmente, y limitar los fondos que destinas al juego porque es tu Wallet Ethereum!</string>
    <string name="title_activity_help">Betex Ayuda</string>
    <string name="wellcome_title">Bienvenido a Betex Sports</string>
    <string name="help_title_01">Apuestas en Betex</string>
    <string name="help_text_01">Betex te permite apostar contra otros usuarios de manera anónima (a través del mercado de apuestas) o directamente contra una persona (a através de Retos directos)</string>
    <string name="help_title_02">Mercado de apuestas</string>
    <string name="help_text_02">En el mercado puedes crear una nueva apuesta o aceptar alguna existente. Para aceptarla haz click en algún botón con el ícono de la ficha.</string>
    <string name="help_title_03">Aceptar una apuesta</string>
    <string name="help_text_03">En un encuentro de fútbol entre Boca Juniors y River Plate puedes apostar a favor o en contra de algún restulado.</string>
    <string name="help_text2_03">Si apuestas a favor de Boca, significa que arriesgas a que el equipo gane. Si apuestas en contra, juegas a que gane River empaten.</string>
    <string name="help_text2_04">Betex calcula el costo y la potencial ganancia en base al tipo de apuestas y riesgo que elijas. Puedes buscar y administrar tu apusta en "Mis Apuestas".</string>
    <string name="help_text2_04_b">Tus apuestas pueden hacer matchear completamente (full match) y parcialemnte. Tu ganancia o pérdida se calcula en base a lo matecheado.</string>
    <string name="help_text2_place_bet">Monto y cuotas de apuestas.</string>
    <string name="help_text_my_bets">Mis apuestas</string>
    <string name="help_place_bets">Aceptar apuesta</string>
    <string name="help_title_rules">Reglas de apuestas</string>
    <string name="help_text_rules">Las apuestas que hagas en Betex se rigen por las reglas de la plataforma y de los deportes. Para más información por favor lee la sección "Reglas".</string>
    <string name="title_activity_rules">Reglas</string>
</resources>