<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_soccer_ball"
            android:title="@string/title_nav_events" />
        <item
            android:id="@+id/nav_myBets"
            android:icon="@drawable/ic_my_bets"
            android:title="@string/title_my_bets" />
        <item
            android:id="@+id/nav_challeges"
            android:icon="@drawable/ic_challenges"
            android:title="@string/title_challenges"/>

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet_black_24dp"
            android:title="@string/title_nav_wallet"/>

        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/title_nav_rules" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_icon_config"
            android:title="@string/title_nav_settings" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/title_nav_share" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/title_help" />
    </group>

</menu>
