<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/myBetsInPlayButton"
        android:drawableTop="@drawable/ic_access_time_black_24dp"
        style="@style/AppTheme.ButttonBar.Button"
        android:text="@string/my_bets_in_play_title"/>

    <Button
        android:id="@+id/myBetBackButton"
        android:drawableTop="@drawable/ic_my_bets_back_24dp"
        style="@style/AppTheme.ButttonBar.Button"
        android:text="@string/my_bets_back" />

    <Button
        android:id="@+id/allMyBetsButton"
        android:drawableTop="@drawable/ic_all_bets"
        style="@style/AppTheme.ButttonBar.Button"
        android:text="@string/my_bets_all_tittle" />
</LinearLayout>