<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".fragments.WellcomeStepFragment"
    style="@style/StepperViewContainer">

    <TextView
        android:id="@+id/title"
        android:text="@string/help_title_01"
        style="@style/StepperViewText.Title"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/text"
        android:text="@string/help_text_01"
        style="@style/StepperViewText"/>

    <TextView
        android:id="@+id/text2"
        android:text="@string/help_text2_03"
        style="@style/StepperViewText"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="@dimen/help_stepper_img_cell_width"
                    android:layout_height="@dimen/help_stepper_img_cell_height"
                    style="@style/StepperViewComponent"
                    app:srcCompat="@drawable/help_betex_market"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/txtImg"
                    android:text="Mercado de apuestas"
                    style="@style/StepperViewText.Caption"
                    android:layout_margin="2dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="@dimen/help_stepper_img_cell_width"
                    android:layout_height="@dimen/help_stepper_img_cell_height"
                    style="@style/StepperViewComponent"
                    app:srcCompat="@drawable/help_betex_challenge"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/txtImg2"
                    android:text="Retos directos"
                    style="@style/StepperViewText.Caption"
                    android:layout_margin="2dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>